@@ -97,6 +97,24 @@ as a signed in 2'd complementary representation and return its signed properties
 </p>
 
 <pre>
+
+  // bit count
+
+  static unsigned <span class="Att">CountZeroMSB</span>(UInt a);
+  
+  static unsigned <span class="Att">CountZeroLSB</span>(UInt a);
+
+</pre>
+
+<p>
+<b>CountZeroMSB()</b> counts the number of zero most significant bits of the given number.
+</p>
+
+<p>
+<b>CountZeroLSB()</b> counts the number of zero least significant bits of the given number.
+</p>
+
+<pre>
   
   // additive
   
